# nocturne

./: .clangd.in  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
assets/wgsl/: test.wgsl
cmake/: utils.cmake
renderer/: CMakeLists.txt
renderer/include/: export_api.h  export_api.h.in  renderer.h  renderer.hpp
renderer/src/: renderer.cpp  webgpu_impl.cpp
src/: application.hpp  main.cpp  model_loader.hpp
utils/: bitflags.hpp  optional.hpp  result.hpp
window/: CMakeLists.txt
window/include/: export_api.h  window.hpp
window/src/: sdl_window.hpp  window.cpp
